--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="icon" href="icon128_V2.png" type="image/x-icon">
+    <link rel="icon" href="icon.webp" type="image/x-icon">
     <link rel="stylesheet" href="/styles.css">
     <script src="/scripts/game.js"></script>
 </head>
