--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Index</title>
-    <link rel="icon" href="icon.webp" type="image/x-icon">
-    <link rel="stylesheet" href="/styles.css">
-    <script src="/scripts/game.js"></script>
+    <link rel="icon" href="MeeseekRun/icon.webp" type="image/x-icon">
+    <link rel="stylesheet" href="/MeeseekRun/styles.css">
+    <script src="/MeeseekRun/scripts/game.js"></script>
 </head>
 
 <body style="margin: 0;">
